--- a/.gitignore
+++ b/.gitignore
@@ -62,5 +62,8 @@ node_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
+# config files
+config.js
+
+# cv
+files/cv.pdf
